kubernetes/apps/network/traefik/public/dashboard.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-public
  annotations:
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-public.${SECRET_PRIVATE_DOMAIN}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: ${SECRET_PRIVATE_DOMAIN//./-}-tls
